<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="Home" />

    <item
        android:id="@+id/courses_button"
        android:icon="@drawable/learning"
        android:title="Headstart" />

    <item
        android:id="@+id/profile_button"
        android:icon="@drawable/profile_icon"
        android:title="@string/Profile" />

</menu>